removing blogs functionality

--- a/Ocean.Inside.Project/Ocean.Inside.Project.csproj
+++ b/Ocean.Inside.Project/Ocean.Inside.Project.csproj
@@ -253,19 +253,9 @@
     <Content Include="Scripts\respond.min.js" />
     <Content Include="Scripts\script.js" />
     <Content Include="Scripts\_references.js" />
-    <Content Include="Views\Home\404.html" />
-    <Content Include="Views\Home\503.html" />
+    <None Include="Views\Shared\404.cshtml" />
+    <None Include="Views\Shared\503.cshtml" />
     <Content Include="Views\Home\about.html" />
-    <Content Include="Views\Home\blog-grid-sidebar-left.html" />
-    <Content Include="Views\Home\blog-grid.html" />
-    <Content Include="Views\Home\blog-list-sidebar-left.html" />
-    <Content Include="Views\Home\blog-list-variant-2-sidebar-left.html" />
-    <Content Include="Views\Home\blog-list-variant-2.html" />
-    <Content Include="Views\Home\blog-list.html" />
-    <Content Include="Views\Home\blog-masonry.html" />
-    <Content Include="Views\Home\blog-modern.html" />
-    <Content Include="Views\Home\blog-single-post-sidebar-left.html" />
-    <Content Include="Views\Home\blog-single-post.html" />
     <Content Include="Views\Home\careers.html" />
     <Content Include="Views\Home\comingsoon.html" />
     <Content Include="Views\Home\contacts-variant-2.html" />
@@ -278,7 +268,6 @@
     <Content Include="Views\Home\gallery-grid.html" />
     <Content Include="Views\Home\gallery-masonry.html" />
     <None Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Home\login.html" />
     <Content Include="Views\Home\manitenance.html" />
     <Content Include="Views\Home\our-team.html" />
     <Content Include="Views\Home\press.html" />
