--- a/Ocean.Inside.Project/Ocean.Inside.Project.csproj
+++ b/Ocean.Inside.Project/Ocean.Inside.Project.csproj
@@ -188,6 +188,15 @@
     <Content Include="images\770x380.jpg" />
     <Content Include="images\80x80.jpg" />
     <Content Include="images\959x802.jpg" />
+    <Content Include="images\background-05-1920x900.jpg" />
+    <Content Include="images\background-06-1920x900.jpg" />
+    <Content Include="images\background-07-1920x900.jpg" />
+    <Content Include="images\box-offer-01-370x310.jpg" />
+    <Content Include="images\box-offer-02-370x310.jpg" />
+    <Content Include="images\box-offer-03-370x310.jpg" />
+    <Content Include="images\box-offer-04-370x310.jpg" />
+    <Content Include="images\box-offer-05-370x310.jpg" />
+    <Content Include="images\box-offer-06-370x310.jpg" />
     <Content Include="images\icon-01-16x21.png" />
     <Content Include="images\icon-02-19x19.png" />
     <Content Include="images\icon-03-12x20.png" />
@@ -218,6 +227,8 @@
     <Content Include="images\icon-36-19x17.png" />
     <Content Include="images\logo-dark-299x60.png" />
     <Content Include="images\logo-light-299x60.png" />
+    <Content Include="images\logo.jpg" />
+    <Content Include="images\logo_2.jpg" />
     <Content Include="images\photoswipe-controls.png" />
     <Content Include="images\place-01-118x89.jpg" />
     <Content Include="images\place-01-118x89.png" />
@@ -261,36 +272,11 @@
     <Content Include="Scripts\_references.js" />
     <None Include="Views\404.cshtml" />
     <None Include="Views\503.cshtml" />
-    <Content Include="Views\Home\about.html" />
-    <Content Include="Views\Home\careers.html" />
-    <Content Include="Views\Home\comingsoon.html" />
-    <Content Include="Views\Home\contacts-variant-2.html" />
-    <Content Include="Views\Home\contacts.html" />
-    <Content Include="Views\Home\destinations.html" />
-    <Content Include="Views\Home\faq.html" />
-    <Content Include="Views\Home\forgot-password.html" />
-    <Content Include="Views\Home\gallery-cobbles.html" />
-    <Content Include="Views\Home\gallery-fullwidth.html" />
-    <Content Include="Views\Home\gallery-grid.html" />
-    <Content Include="Views\Home\gallery-masonry.html" />
     <None Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Home\manitenance.html" />
-    <Content Include="Views\Home\our-team.html" />
-    <Content Include="Views\Home\press.html" />
-    <Content Include="Views\Home\pricing.html" />
-    <Content Include="Views\Home\privacy.html" />
-    <Content Include="Views\Home\search-results.html" />
-    <Content Include="Views\Home\services.html" />
-    <Content Include="Views\Home\signup-variant-2.html" />
-    <Content Include="Views\Home\signup.html" />
-    <Content Include="Views\Home\sitemap.html" />
-    <Content Include="Views\Home\terms-of-use.html" />
-    <Content Include="Views\Home\testimonials.html" />
     <Content Include="Views\Trip\tours-grid-variant-2.html" />
     <Content Include="Views\Trip\tours-grid.html" />
     <Content Include="Views\Trip\tours-list.html" />
     <Content Include="Views\Trip\tours-single.html" />
-    <Content Include="Views\Home\underconsruction.html" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
