--- a/Ocean.Inside.Project/Ocean.Inside.Project.csproj
+++ b/Ocean.Inside.Project/Ocean.Inside.Project.csproj
@@ -122,7 +122,7 @@
     <Compile Include="Controllers\BlogController.cs" />
     <Compile Include="Controllers\GalleryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\TripController.cs" />
+    <Compile Include="Controllers\ToursController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -160,9 +160,9 @@
     <Content Include="images\100x100.jpg" />
     <Content Include="images\1170x440.jpg" />
     <Content Include="images\1170x780.jpg" />
-    <Content Include="images\1920x900.jpg" />
-    <Content Include="images\1920x900_1.jpg" />
-    <Content Include="images\1920x900_2.jpg" />
+    <Content Include="images\Layout\1920x900.jpg" />
+    <Content Include="images\Layout\1920x900_1.jpg" />
+    <Content Include="images\Layout\1920x900_2.jpg" />
     <Content Include="images\270x160.jpg" />
     <Content Include="images\270x180.jpg" />
     <Content Include="images\270x200.jpg" />
@@ -188,15 +188,15 @@
     <Content Include="images\770x380.jpg" />
     <Content Include="images\80x80.jpg" />
     <Content Include="images\959x802.jpg" />
-    <Content Include="images\background-05-1920x900.jpg" />
-    <Content Include="images\background-06-1920x900.jpg" />
-    <Content Include="images\background-07-1920x900.jpg" />
-    <Content Include="images\box-offer-01-370x310.jpg" />
-    <Content Include="images\box-offer-02-370x310.jpg" />
-    <Content Include="images\box-offer-03-370x310.jpg" />
-    <Content Include="images\box-offer-04-370x310.jpg" />
-    <Content Include="images\box-offer-05-370x310.jpg" />
-    <Content Include="images\box-offer-06-370x310.jpg" />
+    <Content Include="images\Home\background-05-1920x900.jpg" />
+    <Content Include="images\Home\background-06-1920x900.jpg" />
+    <Content Include="images\Home\background-07-1920x900.jpg" />
+    <Content Include="images\Home\box-offer-01-370x310.jpg" />
+    <Content Include="images\Home\box-offer-02-370x310.jpg" />
+    <Content Include="images\Home\box-offer-03-370x310.jpg" />
+    <Content Include="images\Home\box-offer-04-370x310.jpg" />
+    <Content Include="images\Home\box-offer-05-370x310.jpg" />
+    <Content Include="images\Home\box-offer-06-370x310.jpg" />
     <Content Include="images\icon-01-16x21.png" />
     <Content Include="images\icon-02-19x19.png" />
     <Content Include="images\icon-03-12x20.png" />
@@ -225,10 +225,8 @@
     <Content Include="images\icon-34-16x21.png" />
     <Content Include="images\icon-35-19x17.png" />
     <Content Include="images\icon-36-19x17.png" />
-    <Content Include="images\logo-dark-299x60.png" />
-    <Content Include="images\logo-light-299x60.png" />
-    <Content Include="images\logo.jpg" />
-    <Content Include="images\logo_2.jpg" />
+    <Content Include="images\Layout\logo.jpg" />
+    <Content Include="images\Layout\logo_2.jpg" />
     <Content Include="images\photoswipe-controls.png" />
     <Content Include="images\place-01-118x89.jpg" />
     <Content Include="images\place-01-118x89.png" />
@@ -272,11 +270,10 @@
     <Content Include="Scripts\_references.js" />
     <None Include="Views\404.cshtml" />
     <None Include="Views\503.cshtml" />
+    <Content Include="Views\Home\About.cshtml" />
     <None Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Trip\tours-grid-variant-2.html" />
-    <Content Include="Views\Trip\tours-grid.html" />
-    <Content Include="Views\Trip\tours-list.html" />
-    <Content Include="Views\Trip\tours-single.html" />
+    <None Include="Views\Tours\ToursGrid.cshtml" />
+    <None Include="Views\Tours\Tour.cshtml" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
     </Content>
@@ -293,6 +290,10 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="images\About\" />
+    <Folder Include="images\Gallery\" />
+    <Folder Include="images\Tours\" />
+    <Folder Include="images\Visas\" />
     <Folder Include="Models\" />
     <Folder Include="Views\Blog\" />
     <Folder Include="Views\Gallery\" />
