--- a/Ocean.Inside.Service/Ocean.Inside.BLL.csproj
+++ b/Ocean.Inside.Service/Ocean.Inside.BLL.csproj
@@ -45,6 +45,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Ocean.Inside.Dal\Ocean.Inside.DAL.csproj">
+      <Project>{90930C2E-678A-4ECC-92B6-D9655F14D260}</Project>
+      <Name>Ocean.Inside.DAL</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Ocean.Inside.Domain\Ocean.Inside.Domain.csproj">
       <Project>{3DA9E597-566B-4F8A-BFF3-1F585C89B839}</Project>
       <Name>Ocean.Inside.Domain</Name>
