--- a/Ocean.Inside.Dal/Ocean.Inside.Dal.csproj
+++ b/Ocean.Inside.Dal/Ocean.Inside.Dal.csproj
@@ -59,16 +59,16 @@
     <Compile Include="OceanDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IRepository.cs" />
-    <Compile Include="Repositories\IUnitOfWork.cs" />
+    <Compile Include="Infrastructure\IUnitOfWork.cs" />
     <Compile Include="Repositories\RepositoryBase.cs" />
     <Compile Include="Repositories\RepositoryInterfaces\ITourProgramRepository.cs" />
     <Compile Include="Repositories\RepositoryInterfaces\ITourRepository.cs" />
-    <Compile Include="Repositories\TourProgramRepository.cs" />
-    <Compile Include="Repositories\TourRepository.cs" />
-    <Compile Include="Repositories\UnitOfWork.cs" />
-    <Compile Include="OceanInsideSeedData.cs" />
-    <Compile Include="TourProgramConfiguration.cs" />
-    <Compile Include="TourConfiguration.cs" />
+    <Compile Include="Repositories\RepositoryInterfaces\TourProgramRepository.cs" />
+    <Compile Include="Repositories\RepositoryInterfaces\TourRepository.cs" />
+    <Compile Include="Infrastructure\UnitOfWork.cs" />
+    <Compile Include="DbConfiguration\OceanInsideSeedData.cs" />
+    <Compile Include="DbConfiguration\TourProgramConfiguration.cs" />
+    <Compile Include="DbConfiguration\TourConfiguration.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
