--- a/Ocean.Inside.Project/Web.config
+++ b/Ocean.Inside.Project/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="OceanInside.Local" connectionString="Data Source=EPBYMINW4487;Initial Catalog=StoreDb;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="Ocean.db" connectionString="Data Source=EPBYMINW4487;Initial Catalog=Ocean.db;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
