index + tours changes

--- a/Ocean.Inside.Domain/Ocean.Inside.Domain.csproj
+++ b/Ocean.Inside.Domain/Ocean.Inside.Domain.csproj
@@ -40,6 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\Currencies.cs" />
+    <Compile Include="Entities\Image.cs" />
     <Compile Include="Entities\Tour.cs" />
     <Compile Include="Entities\TourProgram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
