--- a/Ocean.Inside.Dal/Ocean.Inside.Dal.csproj
+++ b/Ocean.Inside.Dal/Ocean.Inside.Dal.csproj
@@ -56,7 +56,7 @@
     <Compile Include="Infrastructure\DbFactory.cs" />
     <Compile Include="Infrastructure\Disposable.cs" />
     <Compile Include="Infrastructure\IDbFactory.cs" />
-    <Compile Include="OceanDbContext.cs" />
+    <Compile Include="OceanInsideDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="Infrastructure\IUnitOfWork.cs" />
