--- a/Ocean.Inside.Project/Ocean.Inside.Project.csproj
+++ b/Ocean.Inside.Project/Ocean.Inside.Project.csproj
@@ -60,6 +60,10 @@
       <HintPath>..\packages\AutoMapper.6.0.2\lib\net45\AutoMapper.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Duke.Owin.VkontakteMiddleware, Version=1.2.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Duke.Owin.VkontakteMiddleware.1.2.0.0\lib\net45\Duke.Owin.VkontakteMiddleware.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
@@ -301,9 +305,11 @@
     <None Include="Views\404.cshtml" />
     <None Include="Views\503.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
+    <Content Include="Views\Auth\Login.cshtml" />
     <None Include="Views\Home\Index.cshtml" />
-    <Content Include="Views\Shared\_TourPartialView.cshtml" />
-    <None Include="Views\Tours\ToursGrid.cshtml" />
+    <Content Include="Views\Home\_TourPartialView.cshtml" />
+    <Content Include="Views\Shared\_HeaderSliderPartial.cshtml" />
+    <None Include="Views\Tours\AllTours.cshtml" />
     <None Include="Views\Tours\Tour.cshtml" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
@@ -318,6 +324,7 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
+    <Content Include="Views\Tours\_TourBlockPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -326,7 +333,6 @@
     <Folder Include="images\Tours\" />
     <Folder Include="images\Visas\" />
     <Folder Include="Models\" />
-    <Folder Include="Views\Admin\" />
     <Folder Include="Views\Blog\" />
     <Folder Include="Views\Gallery\" />
   </ItemGroup>
