--- a/Ocean.Inside.Project/Ocean.Inside.Project.csproj
+++ b/Ocean.Inside.Project/Ocean.Inside.Project.csproj
@@ -188,12 +188,14 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Mapping\DomainToViewModelMappingProfile.cs" />
-    <Compile Include="Mapping\ViewModelToDomainMappingProfile.cs" />
+    <Compile Include="Mapping\TourMappingProfile.cs" />
+    <Compile Include="Mapping\GroupTourMappingProfile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\StringExtensions.cs" />
     <Compile Include="Validators\TourValidator.cs" />
+    <Compile Include="ViewModels\GroupTourProgramViewModel.cs" />
     <Compile Include="ViewModels\HomeViewModel.cs" />
+    <Compile Include="ViewModels\GroupTourViewModel.cs" />
     <Compile Include="ViewModels\TourViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -229,6 +231,26 @@
     <Content Include="images\100x100.jpg" />
     <Content Include="images\1170x440.jpg" />
     <Content Include="images\1170x780.jpg" />
+    <Content Include="images\About\Maria_mini.jpg" />
+    <Content Include="images\About\place-01-118x89.jpg" />
+    <Content Include="images\About\place-01-118x89.png" />
+    <Content Include="images\About\place-02-79x89.jpg" />
+    <Content Include="images\About\place-02-79x89.png" />
+    <Content Include="images\About\place-03-138x98.jpg" />
+    <Content Include="images\About\place-03-138x98.png" />
+    <Content Include="images\About\place-04-144x93.jpg" />
+    <Content Include="images\About\place-04-144x93.png" />
+    <Content Include="images\About\place-05-138x96.jpg" />
+    <Content Include="images\About\place-05-138x96.png" />
+    <Content Include="images\About\place-06-138x98.jpg" />
+    <Content Include="images\About\place-06-138x98.png" />
+    <Content Include="images\About\place-07-154x69.jpg" />
+    <Content Include="images\About\place-07-154x69.png" />
+    <Content Include="images\About\place-08-139x74.jpg" />
+    <Content Include="images\About\place-08-139x74.png" />
+    <Content Include="images\About\place-09-132x84.jpg" />
+    <Content Include="images\About\place-09-132x84.png" />
+    <Content Include="images\About\Yauhen_mini.jpg" />
     <Content Include="images\Home\Turkish_main.jpg" />
     <Content Include="images\Layout\1920x900.jpg" />
     <Content Include="images\Layout\1920x900_1.jpg" />
@@ -298,24 +320,6 @@
     <Content Include="images\Layout\logo.jpg" />
     <Content Include="images\Layout\logo_2.jpg" />
     <Content Include="images\photoswipe-controls.png" />
-    <Content Include="images\place-01-118x89.jpg" />
-    <Content Include="images\place-01-118x89.png" />
-    <Content Include="images\place-02-79x89.jpg" />
-    <Content Include="images\place-02-79x89.png" />
-    <Content Include="images\place-03-138x98.jpg" />
-    <Content Include="images\place-03-138x98.png" />
-    <Content Include="images\place-04-144x93.jpg" />
-    <Content Include="images\place-04-144x93.png" />
-    <Content Include="images\place-05-138x96.jpg" />
-    <Content Include="images\place-05-138x96.png" />
-    <Content Include="images\place-06-138x98.jpg" />
-    <Content Include="images\place-06-138x98.png" />
-    <Content Include="images\place-07-154x69.jpg" />
-    <Content Include="images\place-07-154x69.png" />
-    <Content Include="images\place-08-139x74.jpg" />
-    <Content Include="images\place-08-139x74.png" />
-    <Content Include="images\place-09-132x84.jpg" />
-    <Content Include="images\place-09-132x84.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="js\core.min.js" />
@@ -366,7 +370,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="images\About\" />
     <Folder Include="images\Gallery\" />
     <Folder Include="images\Tours\" />
     <Folder Include="images\Visas\" />
