--- a/Ocean.Inside.Domain/Ocean.Inside.Domain.csproj
+++ b/Ocean.Inside.Domain/Ocean.Inside.Domain.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Entities\CheckIn.cs" />
     <Compile Include="Entities\CurrencyCode.cs" />
     <Compile Include="Entities\Image.cs" />
+    <Compile Include="Entities\Testimonial.cs" />
     <Compile Include="Entities\TourStep.cs" />
     <Compile Include="Entities\Tour.cs" />
     <Compile Include="Entities\Waste.cs" />
