--- a/Ocean.Inside.Project/Ocean.Inside.Project.csproj
+++ b/Ocean.Inside.Project/Ocean.Inside.Project.csproj
@@ -231,6 +231,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Mapping\TestimonialMappingProfile.cs" />
     <Compile Include="Mapping\WasteMappingProfile.cs" />
     <Compile Include="Mapping\CheckInMappingProfile.cs" />
     <Compile Include="Mapping\ImageMappingProfile.cs" />
@@ -239,7 +240,7 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
-    <Compile Include="Models\CommentViewModel.cs" />
+    <Compile Include="Models\TestimonialViewModel.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\CheckInViewModel.cs" />
     <Compile Include="Models\ImageViewModel.cs" />
